--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>translator</title>
+    <link rel="stylesheet" href="stylesheet.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <!-- language translation app -->
+     <div class="container">
+        <div class="wrapper">
+            <div class="text-input">
+                <!-- input app -->
+                <textarea spellcheck="false" class="from-text" placeholder="Enter-text"></textarea>
+                <!-- output -->
+                <textarea spellcheck="false" readonly disabled class=""to-text" placeholder="Translation"></textarea>
+            </div>
+        </div>
+     </div>
 </body>
 </html>
